--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "homepage": "https://github.com/aish8la/drop-down-TOP#readme",
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "css-loader": "^7.1.2",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.3",
     "prettier": "3.4.2",
+    "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
